fix spacings on class page

--- a/constellations/gemini-user/src/class/classInfo.sass
+++ b/constellations/gemini-user/src/class/classInfo.sass
@@ -8,16 +8,17 @@
     @media screen and (max-width: $containerWidthPxMonitor)
         flex-direction: column
         justify-content: start
+        margin-top: 0
 
     .block
-        flex-grow: 1
+        flex: 1
 
     h3
         margin: 0
         margin-bottom: $spacing1x
         line-height: $lineHeight1
         font-size: $fontSize1
-        font-weight: $fontWeightNormal
+        font-weight: $fontWeightMed
         color: $colorGrayText
 
         @media screen and (max-width: $containerWidthPxMonitor)
@@ -30,19 +31,24 @@
             @media screen and (max-width: $containerWidthPxMonitor)
                 margin-top: $spacing4x
     
-    #class-location .title,
-    #class-times .class-times
+    .location .title,
+    .class-times .line,
+    .class-price p:first-child
+        font-size: $fontSize0
         font-weight: $fontWeightMed
+        color: $colorBlack
 
-    .class-times .sessions
+    .class-times .sessions,
+    .class-price p:last-child
         margin-top: $spacing1x
 
     p, .line
         margin: 0
-        line-height: $lineHeight1
-        font-size: $fontSize1
+        line-height: $lineHeight0
+        font-size: $fontSize0
 
     .disclaimer
+        margin-top: $spacing1x
         line-height: 20px
         font-size: $fontSize0
         color: $colorGrayText
