--- a/constellations/gemini-user/src/class/classSchedule.sass
+++ b/constellations/gemini-user/src/class/classSchedule.sass
@@ -1,9 +1,9 @@
 @import "../utils/_constants.sass"
 
 #class-session
-    
+
     h3
-        font-weight: $fontWeightNormal
+        font-weight: $fontWeightMed
         color: $colorGrayText
 
         @media screen and (max-width: $containerWidthPxTablet)
@@ -15,20 +15,20 @@
         justify-content: space-between
         padding: $spacing3x 0
         border-bottom: 1px solid $colorGrayLight
-    
+
         @media screen and (max-width: $containerWidthPxLaptop)
             display: block
             width: 100%
-        
+
     .canceled span
         color: $colorRed
-    
+
     .canceled-past span
         color: $colorGrayTextFaded
 
     .past span
         color: $colorGrayTextFaded
-    
+
     span
         @media screen and (max-width: $containerWidthPxLaptop)
             display: block
@@ -39,10 +39,10 @@
 
     .date-column
         flex: 2 1 0
-    
+
     .time-column
         flex: 4 1 0
-    
+
     .canceled
         flex: $spacing10x 0 0
 
